# SCOW

./: CMakeLists.txt  README.md  cmd_queue.h  device.c  device.h  devices.c  devices.h  error.c  event.h  kernel.c  kernel.h  main.c  mem_object.c  mem_object.h  platform.c  platform.h  platforms.c  platforms.h  scow.h  setup_teardown.c  setup_teardown.h  steel_thread.c  steel_thread.h  typedefs.h
inc/: CMakeLists.txt  CMakeLists.txt~  err_codes.h  error.h  mem_object.h  platform.h  platforms.h  scow.h  setup_teardown.h  steel_thread.h  timer.h
src/: CMakeLists.txt  CMakeLists.txt~  devices.c  mem_object.c  platforms.c  setup_teardown.c  steel_thread.c  timer.c
